Dark mode not working on vercel deployment attempt fix 4

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -3384,75 +3384,75 @@ details.collapse summary::-webkit-details-marker {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:border-slate-600:is(.dark *) {
+.dark\:border-slate-600:where(.dark, .dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
-.dark\:border-white:is(.dark *) {
+.dark\:border-white:where(.dark, .dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.dark\:border-opacity-\[4\%\]:is(.dark *) {
+.dark\:border-opacity-\[4\%\]:where(.dark, .dark *) {
   --tw-border-opacity: 4%;
 }
 
-.dark\:bg-slate-300:is(.dark *) {
+.dark\:bg-slate-300:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-700:is(.dark *) {
+.dark\:bg-slate-700:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-800:is(.dark *) {
+.dark\:bg-slate-800:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-900:is(.dark *) {
+.dark\:bg-slate-900:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-white:is(.dark *) {
+.dark\:bg-white:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-opacity-10:is(.dark *) {
+.dark\:bg-opacity-10:where(.dark, .dark *) {
   --tw-bg-opacity: 0.1;
 }
 
-.dark\:text-green-300:is(.dark *) {
+.dark\:text-green-300:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(134 239 172 / var(--tw-text-opacity));
 }
 
-.dark\:text-red-300:is(.dark *) {
+.dark\:text-red-300:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
-.dark\:text-violet-400:is(.dark *) {
+.dark\:text-violet-400:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(167 139 250 / var(--tw-text-opacity));
 }
 
-.dark\:text-white:is(.dark *) {
+.dark\:text-white:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:hover\:bg-slate-950:hover:is(.dark *) {
+.dark\:hover\:bg-slate-950:hover:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
-.hover\:dark\:text-teal-400:is(.dark *):hover {
+.hover\:dark\:text-teal-400:where(.dark, .dark *):hover {
   --tw-text-opacity: 1;
   color: rgb(45 212 191 / var(--tw-text-opacity));
 }
